fix(statistics): #MBA-105 fix lists style to keep elements aligned.

--- a/scss/specifics/minibadge/containers/_statistics.scss
+++ b/scss/specifics/minibadge/containers/_statistics.scss
@@ -116,6 +116,10 @@
           flex: 2;
         }
 
+        .minibadge-list-item-display, .minibadge-list-item-distinction {
+          flex: 1;
+          overflow: auto;
+        }
       }
     }
 
